Add support for T265 and nested tag

--- a/apriltag_ros/config/tags_nested.yaml
+++ b/apriltag_ros/config/tags_nested.yaml
@@ -19,7 +19,7 @@
 #   ]
 standalone_tags:
   [
-    {id: 00, size: 0.1144, name: test}
+    # {id: 0, size: 0.102, name: CENTER}
   ]
 # ## Tag bundle definitions
 # ### Remarks
@@ -44,4 +44,13 @@ standalone_tags:
 #   ]
 tag_bundles:
   [
+    {
+      name: 'nested_A4',
+      layout:
+        [
+          {id: 0, size: 0.102, x: 0.000, y:  0.000, z: 0.0, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0},
+          {id: 1, size: 0.021, x: 0.000, y:  0.000, z: 0.0, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0},
+          {id: 2, size: 0.004, x: 0.000, y:  0.000, z: 0.0, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0}
+        ]
+    }
   ]
