--- a/apriltag_ros/config/tags_nested.yaml
+++ b/apriltag_ros/config/tags_nested.yaml
@@ -45,12 +45,20 @@ standalone_tags:
 tag_bundles:
   [
     {
-      name: 'nested_A4',
+      # name: 'nested_A4',
+      # layout:
+      #   [
+      #     {id: 0, size: 0.102, x: 0.000, y:  0.000, z: 0.0, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0},
+      #     {id: 1, size: 0.021, x: 0.000, y:  0.000, z: 0.0, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0},
+      #     {id: 2, size: 0.004, x: 0.000, y:  0.000, z: 0.0, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0}
+      #   ]
+      name: 'nested_A1',
       layout:
         [
-          {id: 0, size: 0.102, x: 0.000, y:  0.000, z: 0.0, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0},
-          {id: 1, size: 0.021, x: 0.000, y:  0.000, z: 0.0, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0},
-          {id: 2, size: 0.004, x: 0.000, y:  0.000, z: 0.0, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0}
+          {id: 0, size: 0.333, x: 0.000, y:  0.000, z: 0.0, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0},
+          {id: 1, size: 0.065, x: 0.000, y:  0.000, z: 0.0, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0},
+          {id: 2, size: 0.013, x: 0.000, y:  0.000, z: 0.0, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0},
+          {id: 3, size: 0.003, x: 0.000, y:  0.000, z: 0.0, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0}
         ]
     }
   ]
