--- a/apriltag_ros/config/tags.yaml
+++ b/apriltag_ros/config/tags.yaml
@@ -19,7 +19,7 @@
 #   ]
 standalone_tags:
   [
-    {id: 00, size: 0.044, name: test}
+    {id: 00, size: 0.044, name: anchor120}
   ]
 # ## Tag bundle definitions
 # ### Remarks
